Name:                IrcScanner2
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable IrcScanner2
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
                QuickCheck >= 2.9.2,
                base                      >= 4     && < 5,
                bytestring                >= 0.9.1 && < 0.11,
                hspec >= 2.2.4,
                monad-control             >= 1.0   && < 1.1,
                mtl                       >= 2     && < 3,
                regex-pcre,
                snap-core                 >= 1.0   && < 1.1,
                snap-server               >= 1.0   && < 1.1
  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
