Name:                IrcScanner
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable IrcScanner
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
                QuickCheck >= 2.9.2,
                aeson >= 1.0.2.1,
                base                      >= 4,
                blaze-builder >= 0.4.0.2,
                bytestring                >= 0.9.1,
                containers >= 0.5.7.1,
                directory >= 1.3.0.0,
                dlist >= 0.8.0.2,
                either >= 4.4.1.1,
                heist >= 1.0.1.0,
                hinotify >= 0.3.9,
                hspec >= 2.2.4,
                lens >= 4.14,
                map-syntax >= 0.2.0.2,
                monad-control             >= 1.0,
                mtl                       >= 2,
                network >= 2.6.3.2,
                parsec >= 3.1.11,
                regex-pcre >= 0.94.4,
                snap                      >= 1.0.0.1,
                snap-core                 >= 1.0,
                snap-server               >= 1.0,
                split >= 0.2.3.1,
                text >= 1.2.2.1,
                text-icu                  >= 0.7.0.1,
                time >= 1.6.0.1,
                transformers >= 0.5.2.0,
                unix >= 2.7.2.1,
                unordered-containers >= 0.2.8.0,
                xmlhtml >= 0.2.4,
                binary-search >= 1.0.0.3
  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
